# Unifying-Photometric-Stereo-and-Active-Stereo-for-Surface-Reconstruction

./: CMakeLists.txt  README.md  captureRealData.py  depthReprojection.py  fullPipeline.py  generateImages.py  highAccuracyCustomConfig.json  linearFusion.py  mylib.h  normals_test.py  psutil.py  pywrap.cpp  rps.py  runNormalsTest.py  segmentImages.py  selfSampler.py
CameraCalibration/: captureCalibrationImages.py  charucoCalibration.py  errorAnalysis.py
data/: README.md
depth_normal_fusion/: dnfusion.py
fusionResults/: Mitsuba_mtx.npy  analyseDepth.py  boxplotDepth.py
results/: analyseBulk.py  analyseReal.py  boxplotBulk.py  generateBoxplots.py  runBulkAnalysis.py
test/: README
test/configs/: Adifuse_10lights.yaml  Adifuse_15lights.yaml  Adifuse_3lights.yaml  Adifuse_4lights.yaml  Adifuse_5lights.yaml  Adifuse_6lights.yaml  Adifuse_7lights.yaml  Adifuse_8lights.yaml  Adifuse_9lights.yaml  Aplastic_10lights.yaml  Aplastic_15lights.yaml  Aplastic_3lights.yaml  Aplastic_4lights.yaml  Aplastic_5lights.yaml  Aplastic_6lights.yaml  Aplastic_7lights.yaml  Aplastic_8lights.yaml  Aplastic_9lights.yaml  BuddhaDome.yaml  BuddhaJune2.yaml  BuddhaMay28.yaml  difuseWide_10lights.yaml  difuseWide_15lights.yaml  difuseWide_3lights.yaml  difuseWide_4lights.yaml  difuseWide_5lights.yaml  difuseWide_6lights.yaml  difuseWide_7lights.yaml  difuseWide_8lights.yaml  difuseWide_9lights.yaml  difuse_10lights.yaml  difuse_15lights.yaml  difuse_3lights.yaml  difuse_4lights.yaml  difuse_5lights.yaml  difuse_6lights.yaml  difuse_7lights.yaml  difuse_8lights.yaml  difuse_9lights.yaml  metalNarrow_10lights.yaml  (+36 more)
